feat: Finalize deployment scripts

--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -18,5 +18,10 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         port: ${{ secrets.SSH_PORT }}
         script: |
-          whoami
-          ls -al
+          sudo su
+          cd /var/www/html/hotel-miranda-laravel
+          git pull
+          composer install
+          php artisan migrate:fresh --seed --force
+          php artisan cache:clear
+          systemctl restart apache2
