--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -9,7 +9,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
     - name: ssh deploy
       uses: appleboy/ssh-action@v1.1.0
       with:
@@ -18,10 +17,10 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         port: ${{ secrets.SSH_PORT }}
         script: |
-          sudo su
           cd /var/www/hotel-miranda-laravel
-          git pull origin main
-          composer install
-          php artisan migrate:fresh --seed --force
-          php artisan cache:clear
-          systemctl restart apache2
+          sudo git pull origin main
+          sudo composer install
+          yes
+          sudo php artisan migrate:fresh --seed --force
+          sudo php artisan cache:clear
+          sudo systemctl restart apache2
