--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,12 +1,13 @@
 name: Deploy to ec2
 
 on:
-    push:
-      branches:
-      - main
+  pull_request:
+    types:
+    - closed
 
 jobs:
   deploy:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
     - name: ssh deploy
